--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_slidable: ^3.0.0
   dotted_line: ^3.1.0
   flutter_svg: ^2.0.5
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.2
+  bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
