--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.2
   bloc: ^8.1.1
+  go_router: ^7.0.1
+  provider: ^6.0.5
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
