--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^7.0.1
   provider: ^6.0.5
   salomon_bottom_bar: ^3.3.2
+  firebase_core: ^2.13.0
 
 dev_dependencies:
   flutter_test:
