--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   provider: ^6.0.5
   salomon_bottom_bar: ^3.3.2
   firebase_core: ^2.13.0
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
