--- a/packages/cart_repository/pubspec.yaml
+++ b/packages/cart_repository/pubspec.yaml
@@ -8,12 +8,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cache:
-    path: ../cache
 
   equatable: ^2.0.5
   meta: ^1.8.0
   uuid: ^3.0.7
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
