--- a/packages/preference_repository/pubspec.yaml
+++ b/packages/preference_repository/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   equatable: ^2.0.5
   meta: ^1.8.0
   uuid: ^3.0.7
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
