--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   firebase_core: ^2.13.0
   collection: ^1.17.0
+  ionicons: ^0.2.2
 
 dev_dependencies:
   flutter_test:
