--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_core: ^2.13.0
   collection: ^1.17.0
   ionicons: ^0.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
