--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   collection: ^1.17.0
   ionicons: ^0.2.2
   shimmer: ^3.0.0
+  flutter_paypal: ^0.0.8
 
 dev_dependencies:
   flutter_test:
