--- a/packages/common/android/local.properties
+++ b/packages/common/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\dsre1\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\Abril\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\src\\flutter
