--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -1,10 +1,10 @@
 name: restaurant
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
   bloc: ^8.1.2
@@ -30,6 +30,8 @@ dependencies:
   go_router: ^7.1.1
   ionicons: ^0.2.2
   provider: ^6.0.5
+  country_picker: ^2.0.20
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
