--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.5
   country_picker: ^2.0.20
   flutter_time_picker_spinner: ^2.0.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
