--- a/apps/client/pubspec.yaml
+++ b/apps/client/pubspec.yaml
@@ -1,10 +1,10 @@
 name: client
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
   bloc: ^8.1.2
@@ -24,6 +24,12 @@ dependencies:
     path: ../../packages/cart_repository
   preference_repository:
     path: ../../packages/preference_repository
+  category_repository:
+    path: ../../packages/category_repository
+  menu_repository:
+    path: ../../packages/menu_repository
+  cuisine_repository:
+    path: ../../packages/cuisine_repository
   flutter_bloc: ^8.1.3
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.6
@@ -38,5 +44,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  
