--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   country_picker: ^2.0.20
   flutter_time_picker_spinner: ^2.0.0
   image_picker: ^0.8.4+4
+  formz: ^0.6.0
+  form_inputs:
+    path: ../../packages/form_inputs
 
 dev_dependencies:
   flutter_test:
