paypal functional price

--- a/packages/common/pubspec.yaml
+++ b/packages/common/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.0.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -21,7 +21,7 @@ dependencies:
   preference_repository:
     path: ../preference_repository
   collection: ^1.17.1
-  google_fonts: ^5.0.0
+  google_fonts: any
   dotted_line: ^3.1.0
 
 dev_dependencies:
