--- a/apps/client/pubspec.yaml
+++ b/apps/client/pubspec.yaml
@@ -1,10 +1,10 @@
 name: client
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
   bloc: ^8.1.2
@@ -30,6 +30,7 @@ dependencies:
   go_router: ^7.1.1
   ionicons: ^0.2.2
   provider: ^6.0.5
+  flutter_paypal: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -38,5 +39,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  
