--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   formz: ^0.6.0
   form_inputs:
     path: ../../packages/form_inputs
+  firebase_storage: ^11.2.2
 
 dev_dependencies:
   flutter_test:
