--- a/packages/restaurant_repository/pubspec.yaml
+++ b/packages/restaurant_repository/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   equatable: ^2.0.5
   meta: ^1.8.0
   uuid: ^3.0.7
+  firebase_storage: ^11.2.2
 
 dev_dependencies:
   flutter_test:
