--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     path: ../../packages/cuisine_repository
   fluttertoast: ^8.2.2
   firebase_storage: ^11.2.2
+  intl: ^0.17.0
+  easy_mask: ^2.0.1
 
 dev_dependencies:
   flutter_test:
