--- a/apps/client/pubspec.yaml
+++ b/apps/client/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     path: ../../packages/menu_repository
   cuisine_repository:
     path: ../../packages/cuisine_repository
+  form_inputs:
+    path: ../../packages/form_inputs
+  user_repository:
+    path: ../../packages/user_repository
   flutter_bloc: ^8.1.3
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.6
@@ -40,6 +44,7 @@ dependencies:
   provider: ^6.0.5
   flutter_paypal: ^0.2.0
   paypal_sdk: ^1.0.7
+  formz: ^0.6.0
 
 dev_dependencies:
   flutter_test:
