--- a/apps/client/pubspec.yaml
+++ b/apps/client/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
     path: ../../packages/menu_repository
   cuisine_repository:
     path: ../../packages/cuisine_repository
+  order_repository:
+    path: ../../packages/order_repository
   flutter_bloc: ^8.1.3
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.6
