--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
     path: ../../packages/cart_repository
   preference_repository:
     path: ../../packages/preference_repository
+  order_repository:
+    path: ../../packages/order_repository
   flutter_bloc: ^8.1.3
   flutter_slidable: ^3.0.0
   flutter_svg: ^2.0.6
