--- a/apps/client/pubspec.yaml
+++ b/apps/client/pubspec.yaml
@@ -50,11 +50,18 @@ dependencies:
   paypal_sdk: ^1.0.7
   formz: ^0.6.0
   intl: ^0.18.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "../../assets/images/logo.jpg"
 
 flutter:
   uses-material-design: true
