--- a/apps/restaurant/pubspec.yaml
+++ b/apps/restaurant/pubspec.yaml
@@ -50,11 +50,18 @@ dependencies:
   fluttertoast: ^8.2.2
   intl: ^0.17.0
   easy_mask: ^2.0.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "../../assets/images/logo.jpg"
 
 flutter:
   uses-material-design: true
